# embedjson

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  common.c  common.h  config.h.in  embedjson.c  embedjson_lint.c  embedjson_parse.c  lexer.c  lexer.h  parser.c  parser.h  ut_common.c  ut_lexer.c  ut_parser.c
doc/: syntax-parser-fsm.dot
scripts/: amalgamate.sh  build_all_configurations.sh  coverage.sh  run_json_test_suite.sh  test_embedjson_parse.sh
tests/: run.sh
tests/cases/1/: out.txt
